# todo-rs

./: .env  Cargo.toml  readme.md
.github/workflows/: ci.yml
migrations/2022-02-20-022604_create_tasks/: down.sql  up.sql
migrations/2022-02-20-022608_create_subtasks/: down.sql  up.sql
migrations/2022-03-05-042729_add_finish_ts/: down.sql  up.sql
migrations/2022-11-13-030617_add_task_priority/: down.sql  up.sql
src/: display.rs  lib.rs  main.rs  models.rs  prompt.rs  schema.rs  taskdb.rs
tests/: cli.rs
