[package]
name = "todo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
anyhow = "1.0"
env_logger = "0.8.4"
clap = { version = "3.1.0", features = ["derive"] }

[dependencies.rusqlite]
version = "0.25.1"
features = ["bundled"]

