cargo-features = ["strip"]

[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.1.0", features = ["derive"] }
diesel = { version = "1.4.8", features = ["sqlite"] }
diesel_migrations = "1.4.0"
chrono = "0.4.19"
tempfile = "3.3.0"
assert_cmd = "2.0.4"
predicates = "2.1.1"

[lib]
name = "todo"
path = "src/lib.rs"

[profile.release]
strip = true
